fixed svg wrap on download

--- a/css/style.css
+++ b/css/style.css
@@ -322,7 +322,7 @@ ul li a:hover {
 /* TEXT STYLE HEADER */
 .textheader {
     display: inline-block;
-    width: 35%;
+    width: 33%;
     margin-left: 11.5rem;
     margin-top: 3rem;
 
@@ -345,7 +345,6 @@ ul li a:hover {
 
 /* CONTAINER IMG */
 .imgheader {
-    width: 43%;
     float: right;
 }
 
@@ -353,7 +352,7 @@ ul li a:hover {
 .imgheader img {
     width: 667px;
     height: 461px;
-    ;
+    margin-right:15.5rem;
 }
 
 .clearfix::after {
